// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Apicco Client discovers all API methods along with their parameters automatically 1`] = `
Object {
  "fruits": Object {
    "eat": [Function],
    "info": [Function],
    "list": [Function],
  },
}
`;

exports[`Apicco Client request method with credential headers send requests using credential:same-origin (default) when no Access-Control headers are set on server 1`] = `
Array [
  Array [
    "http://apicco.test/api/v1/fruits.list",
    Object {
      "body": undefined,
      "credentials": "same-origin",
      "headers": Object {
        "Content-Type": "application/json",
        "User-Agent": "Apicco JS SDK/1.0.10",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`Apicco Client request method with credential headers sends requests using credential:include when Access-Control-Allow-Credentials is set on server 1`] = `
Array [
  Array [
    "http://apicco.test/api/v1/fruits.list",
    Object {
      "body": undefined,
      "credentials": "include",
      "headers": Object {
        "Content-Type": "application/json",
        "User-Agent": "Apicco JS SDK/1.0.10",
      },
      "method": "POST",
    },
  ],
]
`;
